# Redbot

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  README_DE.md  README_EN.md  README_JA.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml
docs/: channels.md  douyin-series.md  fluxtoken.md  local-client.md  openai-compatible.md  product.md  redbot-client-guide.md
examples/: research-brief.md
src/redbot/: __init__.py  __main__.py  channels.py  cli.py  client.py  desktop.py  knowledge.py  llm.py  runner.py  server.py  store.py  templates.py
tests/: test_channels.py  test_cli.py  test_client.py  test_desktop.py  test_knowledge_import.py  test_llm.py  test_runner.py  test_server.py  test_store.py  test_templates.py
