[project]
name = "redbot-agent"
version = "0.1.0"
description = "Redbot is a lightweight open-source personal AI execution assistant for creators and operators."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "RedString AI" }
]
keywords = ["ai", "agent", "assistant", "openai-compatible", "creator-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.14.0,<1.0.0"
]

[project.scripts]
redbot = "redbot.cli:main"

[project.urls]
Homepage = "https://github.com/RedStringAI/Redbot"
Repository = "https://github.com/RedStringAI/Redbot"
Issues = "https://github.com/RedStringAI/Redbot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redbot"]

[tool.hatch.build.targets.sdist]
include = [
  "src/redbot",
  "tests",
  "README.md",
  "README_*.md",
  "LICENSE",
  "NOTICE.md",
  "docs"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
